--- a/SmartHome.Netflix/SmartHome.Netflix.csproj
+++ b/SmartHome.Netflix/SmartHome.Netflix.csproj
@@ -48,21 +48,46 @@
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GalaSoft.MvvmLight.Extras.WPF45">
+      <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.Extras.WPF45.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.WPF45">
+      <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.WPF45.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\Third Party DLLs\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TMDbLib">
+      <HintPath>..\Third Party DLLs\TMDbLib.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\Constants.cs" />
+    <Compile Include="Controls\NetflixAPI.cs" />
+    <Compile Include="Controls\NetflixAuth.cs" />
+    <Compile Include="Controls\NetflixConfig.cs" />
+    <Compile Include="Controls\NetflixRequest.cs" />
+    <Compile Include="Controls\NetflixUpdater.cs" />
+    <Compile Include="Controls\OAuthBase.cs" />
+    <Compile Include="Models\CatalogTitleModel.cs" />
+    <Compile Include="Models\CatalogTitleObjectMap.cs" />
+    <Compile Include="Models\QueueTitleObjectMap.cs" />
     <Compile Include="Netflix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Netflix_ContentVM.cs" />
     <Compile Include="Views\Netflix_Content.xaml.cs">
       <DependentUpon>Netflix_Content.xaml</DependentUpon>
     </Compile>
@@ -71,9 +96,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controls\" />
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
+    <None Include="NfPlayer.exe.config" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\Netflix_Content.xaml">
@@ -86,9 +109,19 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="accessInfo.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\netflix.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="NfPlayer.exe" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmartHome.Common\SmartHome.Common.csproj">
+      <Project>{8293de8c-85fe-4783-8497-82921152b922}</Project>
+      <Name>SmartHome.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
