--- a/SmartHome.YouTube/SmartHome.YouTube.csproj
+++ b/SmartHome.YouTube/SmartHome.YouTube.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3F63328C-9F82-4270-8AD5-2EBBECEA1AD1}</ProjectGuid>
+    <ProjectGuid>{08B9F7E0-1C5C-45B8-8F08-B8E0A73F1B66}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SmartHome.Movies</RootNamespace>
-    <AssemblyName>SmartHome.Movies</AssemblyName>
+    <RootNamespace>SmartHome.YouTube</RootNamespace>
+    <AssemblyName>SmartHome.YouTube</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,40 +29,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="GalaSoft.MvvmLight.Extras.WPF45">
       <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.Extras.WPF45.dll</HintPath>
     </Reference>
-    <Reference Include="GalaSoft.MvvmLight.WPF45, Version=4.1.24.16411, Culture=neutral, PublicKeyToken=eabbf6a5f5af5004, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="GalaSoft.MvvmLight.WPF45">
       <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.WPF45.dll</HintPath>
     </Reference>
-    <Reference Include="MediaBrowser.ApiInteraction">
-      <HintPath>..\Third Party DLLs\MediaBrowser.ApiInteraction.dll</HintPath>
+    <Reference Include="Google.Apis">
+      <HintPath>..\Third Party DLLs\Google.Apis.dll</HintPath>
     </Reference>
-    <Reference Include="MediaBrowser.Common">
-      <HintPath>..\Third Party DLLs\MediaBrowser.Common.dll</HintPath>
+    <Reference Include="Google.GData.Client">
+      <HintPath>..\Third Party DLLs\Google.GData.Client.dll</HintPath>
     </Reference>
-    <Reference Include="MediaBrowser.Model">
-      <HintPath>..\Third Party DLLs\MediaBrowser.Model.dll</HintPath>
+    <Reference Include="Google.GData.YouTube">
+      <HintPath>..\Third Party DLLs\Google.GData.YouTube.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -77,35 +58,29 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\BaseMediaBrowserAPI.cs" />
-    <Compile Include="Controls\MediaAPI.cs" />
-    <Compile Include="Models\MediaModel.cs" />
-    <Compile Include="Models\MediaObjectMap.cs" />
-    <Compile Include="Movies.cs" />
+    <Compile Include="ViewModels\YouTube_ContentVM.cs" />
+    <Compile Include="Views\YouTube_Content.xaml.cs">
+      <DependentUpon>YouTube_Content.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\YouTube_Tile.xaml.cs">
+      <DependentUpon>YouTube_Tile.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="YouTube.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\Movies_ContentVM.cs" />
-    <Compile Include="Views\Movies_Content.xaml.cs">
-      <DependentUpon>Movies_Content.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Movies_Tile.xaml.cs">
-      <DependentUpon>Movies_Tile.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Page Include="Views\Movies_Content.xaml">
+    <Page Include="Views\YouTube_Content.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Movies_Tile.xaml">
+    <Page Include="Views\YouTube_Tile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\Movies.gif">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Folder Include="Controls\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SmartHome.Common\SmartHome.Common.csproj">
