--- a/SmartHome.Netflix/SmartHome.Netflix.csproj
+++ b/SmartHome.Netflix/SmartHome.Netflix.csproj
@@ -115,7 +115,9 @@
     <Content Include="Images\netflix.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NfPlayer.exe" />
+    <Content Include="NfPlayer.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SmartHome.Common\SmartHome.Common.csproj">
