--- a/SmartHome/SmartHome.csproj
+++ b/SmartHome/SmartHome.csproj
@@ -60,6 +60,20 @@
     <Reference Include="GalaSoft.MvvmLight.WPF45">
       <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.WPF45.dll</HintPath>
     </Reference>
+    <Reference Include="Gentle.Common, Version=1.5.0.29112, Culture=neutral, PublicKeyToken=80b5de62e27be49b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Third Party DLLs\Gentle.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Gentle.Framework, Version=1.5.0.29112, Culture=neutral, PublicKeyToken=80b5de62e27be49b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Third Party DLLs\Gentle.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Gentle.Provider.MySQL">
+      <HintPath>..\Third Party DLLs\Gentle.Provider.MySQL.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\Third Party DLLs\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
