--- a/SmartHome.Movies/SmartHome.Movies.csproj
+++ b/SmartHome.Movies/SmartHome.Movies.csproj
@@ -74,6 +74,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vlc.DotNet.Core">
+      <HintPath>..\Third Party DLLs\Vlc.DotNet.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Vlc.DotNet.Core.Interops">
+      <HintPath>..\Third Party DLLs\Vlc.DotNet.Core.Interops.dll</HintPath>
+    </Reference>
+    <Reference Include="Vlc.DotNet.Wpf">
+      <HintPath>..\Third Party DLLs\Vlc.DotNet.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +90,7 @@
     <Compile Include="Controls\MediaAPI.cs" />
     <Compile Include="Models\MediaModel.cs" />
     <Compile Include="Models\MediaObjectMap.cs" />
+    <Compile Include="Models\MediaSelectedItem.cs" />
     <Compile Include="Movies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Movies_ContentVM.cs" />
