--- a/SmartHome.TV/SmartHome.TV.csproj
+++ b/SmartHome.TV/SmartHome.TV.csproj
@@ -48,8 +48,35 @@
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GalaSoft.MvvmLight.Extras.WPF45">
+      <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.Extras.WPF45.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.WPF45">
+      <HintPath>..\Third Party DLLs\GalaSoft.MvvmLight.WPF45.dll</HintPath>
+    </Reference>
+    <Reference Include="Gentle.Common">
+      <HintPath>..\Third Party DLLs\Gentle.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Gentle.Framework, Version=1.5.0.29112, Culture=neutral, PublicKeyToken=80b5de62e27be49b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Third Party DLLs\Gentle.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Gentle.Provider.MySQL">
+      <HintPath>..\Third Party DLLs\Gentle.Provider.MySQL.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\Third Party DLLs\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data, Version=5.1.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Third Party DLLs\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="RestSharp, Version=104.3.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Third Party DLLs\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -60,11 +87,35 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TMDbLib">
+      <HintPath>..\Third Party DLLs\TMDbLib.dll</HintPath>
+    </Reference>
+    <Reference Include="TvControl">
+      <HintPath>..\Third Party DLLs\TvControl.dll</HintPath>
+    </Reference>
+    <Reference Include="TVDatabase">
+      <HintPath>..\Third Party DLLs\TVDatabase.dll</HintPath>
+    </Reference>
+    <Reference Include="TvdbLib">
+      <HintPath>..\Third Party DLLs\TvdbLib.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\EPG_Control_V4.cs" />
+    <Compile Include="Controls\TvClientV2.cs" />
+    <Compile Include="Controls\TV_Control.cs" />
+    <Compile Include="Models\EPG_Program_Channel.cs" />
+    <Compile Include="Models\EPG_SelectedItem.cs" />
+    <Compile Include="Models\EPG_Time.cs" />
+    <Compile Include="Models\ExtendedProgram.cs" />
     <Compile Include="TV.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\EPG_VM.cs" />
+    <Compile Include="ViewModels\TV_ContentVM.cs" />
+    <Compile Include="Views\EPG.xaml.cs">
+      <DependentUpon>EPG.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TV_Content.xaml.cs">
       <DependentUpon>TV_Content.xaml</DependentUpon>
     </Compile>
@@ -73,11 +124,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controls\" />
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
+    <None Include="Gentle.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\EPG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\TV_Content.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -91,6 +146,12 @@
     <Content Include="Images\TV.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmartHome.Common\SmartHome.Common.csproj">
+      <Project>{8293de8c-85fe-4783-8497-82921152b922}</Project>
+      <Name>SmartHome.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
